Wed Feb  5 04:23:41 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: New release of psych.
	* ext/psych/psych.gemspec: ditto

Wed Feb  5 04:16:41 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/yaml/emitter.c: merge libyaml 0.1.5
	* ext/psych/yaml/loader.c: ditto
	* ext/psych/yaml/parser.c: ditto
	* ext/psych/yaml/reader.c: ditto
	* ext/psych/yaml/scanner.c: ditto
	* ext/psych/yaml/writer.c: ditto
	* ext/psych/yaml/yaml_private.h: ditto

Tue Feb  4 19:10:29 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c: use long allocator names instead of numbered
	  allocator names.
	  * rb_str_new2 -> rb_str_new_cstr
	  * rb_str_new4 -> rb_str_new_frozen
	  * rb_str_new5 -> rb_str_new_with_class
	  * str_new3 -> str_new_shared
	  * str_new4 -> str_new_frozen_with_klass

Tue Feb  4 17:20:03 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): return the filename with actual cases on
	  the filesystem if it is case-insensitive.  [ruby-core:42469]
	  [Feature #5994]

Tue Feb  4 16:16:58 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c: use STR_SHARED instead of ELTS_SHARED.
	  (same value, but more clear meaning)

Tue Feb  4 16:09:14 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c: remvoe STR_ASSOC related code.
	  By r44804, string objects can not have STR_ASSOC flag.

	* internal.h: ditto.

	* ext/objspace/objspace_dump.c (dump_object): ditto.

Tue Feb  4 14:07:20 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (str_associate, str_associated): keep associated objects
	  in an instance variables, instead of in the internal structure.

	* string.c (rb_str_associate, rb_str_associated): deprecate.

Tue Feb  4 12:55:31 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_modify_expand): enable capacity and disable
	  assocation with packed objects when setting capa, so that
	  pack("p") string fails to unpack properly after modified.
